--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
  <h2>{{title}}</h2>
-<app-place></app-place>
+<a routerLink="/places">Places</a>
+<a routerLink="/dashboard">My-Dashboard</a>
+
+<router-outlet></router-outlet>
+<app-message></app-message>
