--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
 <div>
-    <a *ngFor="let place of places2">{{place.Name}}</a>
+    <a *ngFor="let place of places2" routerLink="/detail/ {{place.SerialNo}}">{{place.Name}}</a>
 </div>
