--- a/src/app/place-details/place-details.component.html
+++ b/src/app/place-details/place-details.component.html
@@ -4,7 +4,7 @@
     
     <div class="unique-place">
         <button type="button" (click)="goBack()">Go Back!</button>
-              
+        <!-- <button type="button" (click)="save()">Save!!</button> -->
         <label for="myplace">Place Name: </label>
         <input id="myplace" [(ngModel)]="myplace.Name" placeholder="Name">
     </div>
