--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -1,3 +1,4 @@
+<h1>heyyy</h1>
 <div class="unique-class">
     <ul class="unique-list">
         
@@ -7,8 +8,14 @@
             <span>{{places1.SerialNo}} </span>
             <span>{{places1.Name}} </span>
         </a>
+       <!-- <button type="button" (click)="delete(places1)"> Delete!</button> -->
         </li>
 
     </ul>
 </div>
+<!-- <div>
+    <label for="new-place">Place Name:::</label>
+    <input id="new-place" #placeName>
+    <button type="button" (click)="add(placeName.value)">Add Place</button>
+</div> -->
 <!-- <app-place-details [myplace]="selectedPlace"></app-place-details> -->
